...
      </Text>

    {/* Botão para avançar para a tela de criação de dieta */}
      <Link href="/step" asChild>
        <Pressable style={styles.button}>
          <Text style={styles.buttonText}>
            Gerar dieta
          </Text>
        </Pressable>
      </Link>
    </View>
  )
}
...
