...
 * Tipo que representa os dados de um usuário no sistema.
 */
export type User = {
  /** Nome do usuário */
  name: string;
  /** Peso do usuário (representado como string) */
  weight: string;
  /** Idade do usuário (representado como string) */
  age: string;
  /** Altura do usuário (representado como string) */
  height: string;
  /** Nível de experiência ou condicionamento físico do usuário */
  level: string;
  /** Objetivo do usuário (exemplo: perder peso, ganhar massa muscular, etc.) */
  objective: string;
...
